--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "proyecto-nodejs",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
- 
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "create-admin": "node crearUsuario.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.3.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "express-rate-limit": "^6.7.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "mysql2": "^3.9.7"
   }
 }
